--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,16 @@
 cmake_minimum_required(VERSION 3.16)
+project(Sald VERSION 0.0.2)
 
-project(Sald VERSION 0.0.1 LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include(CTest)
+
 
 if (UNIX)
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath='$ORIGIN'")
-	# libglew_static fails without -fPIC (Position Independent Code) on linux. Should probably learn more about this and find a better solution.
-	add_compile_options (-fPIC)
+	set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -Werror")
+	set(CMAKE_CXX_FLAGS_DEBUG "-g")
+	set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath='$ORIGIN'")
 endif()
 
 add_subdirectory(sald/vendor/glad EXCLUDE_FROM_ALL)
