--- a/sandbox2D/CMakeLists.txt
+++ b/sandbox2D/CMakeLists.txt
@@ -12,8 +12,8 @@ add_executable(${PROJECT_NAME}
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
-	${CMAKE_CURRENT_SOURCE_DIR}/include
-	${CMAKE_CURRENT_SOURCE_DIR}/../sald/include
+	${CMAKE_CURRENT_SOURCE_DIR}/src
+	${CMAKE_CURRENT_SOURCE_DIR}/../sald/src
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE sald)
