Gui -> SaldGui and fix SaldGui to work with new structure WIP

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Gui",
+            "name": "SaldGui Debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/release/gui/Debug/gui",
+            "program": "${workspaceFolder}/release/SaldGui/Debug/SaldGui",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/release/gui/Debug",
+            "cwd": "${workspaceFolder}/release/SaldGui/Debug",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -22,6 +22,17 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "(Windows) SaldGui Debug",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/release/SaldGui/Debug/SaldGui.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/release/SaldGui/Debug",
+            "environment": [],
+            "console": "externalTerminal"
         },
         {
             "name": "Sandbox Debug",
