--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "saldGui/vendor/imgui"]
 	path = saldGui/vendor/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "sald/vendor/spdlog"]
+	path = sald/vendor/spdlog
+	url = https://github.com/gabime/spdlog.git
