--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -6,9 +6,13 @@ if (UNIX)
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath='$ORIGIN'")
 endif()
 
-file(GLOB SOURCES src/*.cpp)
-add_executable(${PROJECT_NAME}
-	${SOURCES}
+add_executable(${PROJECT_NAME})
+
+target_sources(${PROJECT_NAME}
+    PRIVATE
+        src/main.cpp
+        src/SandboxApp.cpp
+        src/SandboxLayer.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
@@ -31,9 +35,5 @@ install(DIRECTORY src/Textures
 )
 
 install(DIRECTORY src/Models
-	DESTINATION ${PROJECT_SOURCE_DIR}/../release/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}
-)
-
-install(DIRECTORY "${PROJECT_SOURCE_DIR}/../release/sald/${CMAKE_BUILD_TYPE}/lib/"
 	DESTINATION ${PROJECT_SOURCE_DIR}/../release/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}
 )
