Moved Material and Mesh files out of 3D

--- a/sald/src/CMakeLists.txt
+++ b/sald/src/CMakeLists.txt
@@ -20,6 +20,8 @@ target_sources(sald
         Sald/Light/ShadowMap.cpp
         Sald/Light/SpotLight.cpp
 
+        Sald/Renderer/Material.cpp
+        Sald/Renderer/Mesh.cpp
         Sald/Renderer/OpenGLContext.cpp
         Sald/Renderer/Renderer.cpp
         Sald/Renderer/Shader.cpp
@@ -29,8 +31,6 @@ target_sources(sald
         Sald/Renderer/2D/Sprite.cpp
 
         Sald/Renderer/3D/Renderer3D.cpp
-        Sald/Renderer/3D/Material.cpp
-        Sald/Renderer/3D/Mesh.cpp
         Sald/Renderer/3D/Model.cpp
 
         Sald/Scene/Camera.cpp
