--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,6 @@ set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build tests")
 add_subdirectory(sald/vendor/assimp EXCLUDE_FROM_ALL)
 
 add_subdirectory(sald)
+add_subdirectory(sald-breakout)
 add_subdirectory(sandbox)
 add_subdirectory(sandbox2D)
