--- a/sandbox2D/CMakeLists.txt
+++ b/sandbox2D/CMakeLists.txt
@@ -29,3 +29,7 @@ install(TARGETS ${PROJECT_NAME}
 install(DIRECTORY src/Shaders
 	DESTINATION ${PROJECT_SOURCE_DIR}/../release/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}
 )
+
+install(DIRECTORY src/Textures
+	DESTINATION ${PROJECT_SOURCE_DIR}/../release/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}
+)
