Use install directory instead of release for outpu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,14 +26,8 @@ add_subdirectory(src)
 
 file(GLOB HEADERS ${PROJECT_SOURCE_DIR}/src/*/*.h)
 install(FILES ${HEADERS}
-    DESTINATION ${PROJECT_SOURCE_DIR}/release/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}/include/Sald
+    DESTINATION ${PROJECT_SOURCE_DIR}/install/${CMAKE_BUILD_TYPE}/include
 )
 install(TARGETS ${PROJECT_NAME}
-    DESTINATION ${PROJECT_SOURCE_DIR}/release/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}/lib
+    DESTINATION ${PROJECT_SOURCE_DIR}/install/${CMAKE_BUILD_TYPE}/lib
 )
-
-if(UNIX)
-    install(FILES
-        DESTINATION ${PROJECT_SOURCE_DIR}/release/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}/lib
-    )
-endif()
