--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ add_subdirectory(src)
 
 file(GLOB HEADERS ${PROJECT_SOURCE_DIR}/src/*/*.h)
 install(FILES ${HEADERS}
-    DESTINATION ${PROJECT_SOURCE_DIR}/install/${CMAKE_BUILD_TYPE}/include
+    DESTINATION ${PROJECT_SOURCE_DIR}/install/include
 )
 install(TARGETS ${PROJECT_NAME}
-    DESTINATION ${PROJECT_SOURCE_DIR}/install/${CMAKE_BUILD_TYPE}/lib
+    DESTINATION ${PROJECT_SOURCE_DIR}/install
 )
