Move to install all necessary .h files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,15 @@ add_subdirectory(vendor/assimp EXCLUDE_FROM_ALL)
 
 add_subdirectory(src)
 
-file(GLOB HEADERS ${PROJECT_SOURCE_DIR}/src/*/*.h)
-install(FILES ${HEADERS}
+install(FILES src/sald.h src/saldpch.h
     DESTINATION ${PROJECT_SOURCE_DIR}/install/include
 )
+
+install(DIRECTORY src/Sald
+    DESTINATION ${PROJECT_SOURCE_DIR}/install/include
+    FILES_MATCHING PATTERN "*.h"
+)
+
 install(TARGETS ${PROJECT_NAME}
-    DESTINATION ${PROJECT_SOURCE_DIR}/install
+    DESTINATION ${PROJECT_SOURCE_DIR}/install/lib
 )
